  e - moving jobs can now trigger a scheduling iteration
  b - fix how qsub sets PBS_O_HOST and PBS_SERVER (Eirikur Hjartarson, deCODE 
      genetics)
  e - added OS independent resending of failed job obits (from D Beer), also
      removed OS specific CACHEOBITFAILURES code.
  e - Added check for duplicate mom_service_port and mom_manager_port for multiple
      moms on the same node

2.3.7 Transition
  f - Added new job attribute ATTR_service. Allows job to run as a pseudo
      service (job script accepts start, stop and status commands)
  f - added SIG_SUSPEND/SIG_RESUME capability for pseudo services
      
2.3.7
  f - Merged multi-mom support from 2.3-multimom branch. Does not work with
      Dynamic node creation yet.
  f - Any-mom feature added. Allows any pbs_mom to come into the cluster
      without the need to be in a nodes file
  e - pbs_mom sisters can now tolerate an explicit group ID instead of only a 
      valid group name. This helps TORQUE be more robust to group lookup 
      failures.
  b - fixed a bug where UNIX domain socket communication was failing when 
      "--disable-privports" was used.
  e - add job exit status as 10th argument to the epilogue script
  c - check filename for NULL to prevent crash
  e - Merged in more logging and NOSIGCHLDMOM capability from Yahoo branch
  e - merged in new log_ext() function to allow more fine grained syslog events, 
      you can now specify severity level. Also added more logging statements
  e - added code to allow compilers to override CLONE_BATCH_SIZE at configure
      time (allows for finer grained control on how arrays are created) (ported
      from Yahoo R2461)
  e - added code which prefixes the severity tag on all log_ext() and log_err()
      messages (ported from Yahoo R2358)
  e - added qmgr option accounting_keep_days, specifies how long to keep
      accounting files.
  e - changed mom config varattr so invoked script returns the varattr name
      and value(s)